objects/FINS_Lending_Loan_Application__c.object
<CustomObject>
    <description>IDO Mortgage/Lending: used for community user to apply for loan. Can view this is in Customer Communities, it links to internal Opportunity</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Loan Applications</relationshipLabel>
        <relationshipName>Loan_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Income__c</fullName>
        <label>Annual Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Application_Phase__c</fullName>
        <description>Used for associating a Flow with the Flow Action component</description>
        <label>Application Phase</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Borrower_SSN__c</fullName>
        <label>Borrower SSN</label>
        <length>9</length>
        <maskChar>X</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Borrower__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Borrower</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>X1003_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Broker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Broker</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Loan Applications</relationshipLabel>
        <relationshipName>Loan_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deposit_Down_Payment__c</fullName>
        <label>Deposit/Down Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Property_Value__c</fullName>
        <label>Estimated Property Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Close_Date__c</fullName>
        <formula>Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Home_Improvement_with_Refi__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Home Improvement with Refi</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>1003 Applications</relationshipLabel>
        <relationshipName>Loan_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loan_Number__c</fullName>
        <label>Loan Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Ownership__c</fullName>
        <label>Loan Ownership</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Joint</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monthly_Debt_Obligations__c</fullName>
        <label>Monthly Debt Obligations</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Occupancy_Type__c</fullName>
        <label>Occupancy Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Primary Residence</fullName>
                </value>
                <value>
                    <fullName>Second Residence</fullName>
                </value>
                <value>
                    <fullName>Investment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Loan Applications</relationshipLabel>
        <relationshipName>Loan_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Type__c</fullName>
        <label>Property Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>House</fullName>
                </value>
                <value>
                    <fullName>Condo</fullName>
                </value>
                <value>
                    <fullName>Town House</fullName>
                </value>
                <value>
                    <fullName>Multi-Family</fullName>
                </value>
                <value>
                    <fullName>Land</fullName>
                </value>
                <value>
                    <fullName>Other Types</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purchase_or_Refinance__c</fullName>
        <label>Purchase or Refinance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Property</fullName>
                </value>
                <value>
                    <fullName>Refinance</fullName>
                </value>
                <value>
                    <fullName>Switching to Cumulus</fullName>
                </value>
                <value>
                    <fullName>Cash Out Refinance</fullName>
                    <isActive>false</isActive>
                    <label>Cash Out Refinance</label>
                </value>
                <value>
                    <fullName>Student Loan Cash Out Refinance</fullName>
                    <isActive>false</isActive>
                    <label>Student Loan Cash Out Refinance</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Realtor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Realtor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Loan Applications (Contact)</relationshipLabel>
        <relationshipName>Loan_Applications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UCIN_External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Cloud Explorer External ID field used to track IDs between systems.</description>
        <externalId>true</externalId>
        <label>UCIN External ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Loan Application</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Purchase_or_Refinance__c</columns>
        <columns>Occupancy_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Referred_Loans</fullName>
        <columns>NAME</columns>
        <columns>Loan_Number__c</columns>
        <columns>Address__c</columns>
        <columns>Borrower__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>My Referred Loans</label>
    </listViews>
    <nameField>
        <label>Loan Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Applications</pluralLabel>
    <recordTypes>
        <fullName>Retail</fullName>
        <active>true</active>
        <description>Retail Loan Applications</description>
        <label>Retail</label>
    </recordTypes>
    <recordTypes>
        <fullName>Wholesale</fullName>
        <active>true</active>
        <description>For Wholesale Loans</description>
        <label>Wholesale</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>